compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__literal_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 16,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 42,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 19,
                                                            end: 21,
                                                            start_line: 1,
                                                            start_col: 20,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 19,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 20,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Bool(
                                                            true,
                                                        ),
                                                        span: Span {
                                                            start: 25,
                                                            end: 29,
                                                            start_line: 1,
                                                            start_col: 26,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 25,
                                                    end: 29,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                            span: Span {
                                                start: 19,
                                                end: 29,
                                                start_line: 1,
                                                start_col: 20,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 32,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Bool(
                                                            false,
                                                        ),
                                                        span: Span {
                                                            start: 36,
                                                            end: 41,
                                                            start_line: 1,
                                                            start_col: 37,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 36,
                                                    end: 41,
                                                    start_line: 1,
                                                    start_col: 37,
                                                },
                                            },
                                            span: Span {
                                                start: 31,
                                                end: 41,
                                                start_line: 1,
                                                start_col: 32,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 43,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 45,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 45,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
