compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__macro_call_error.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Expr {
                                expr: Expr {
                                    kind: MacroCall {
                                        path: ExprPath {
                                            segments: [
                                                ExprPathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 9,
                                                            end: 16,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 9,
                                                end: 16,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                        kind: Format {
                                            format_str: Spanned {
                                                node: "hello",
                                                span: Span {
                                                    start: 18,
                                                    end: 25,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            args: [],
                                            named_args: [],
                                        },
                                    },
                                    span: Span {
                                        start: 7,
                                        end: 26,
                                        start_line: 1,
                                        start_col: 8,
                                    },
                                },
                                has_semi: true,
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 29,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 29,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 29,
        start_line: 1,
        start_col: 1,
    },
}
