compiler-rust/bloodc/src/parser/snapshots/bloodc__parser__tests__macro_call_vec.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: MacroCall {
                                            path: ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 17,
                                                                end: 20,
                                                                start_line: 1,
                                                                start_col: 18,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 17,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                            kind: Vec(
                                                List(
                                                    [
                                                        Expr {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 1,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 22,
                                                                        end: 23,
                                                                        start_line: 1,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 22,
                                                                end: 23,
                                                                start_line: 1,
                                                                start_col: 23,
                                                            },
                                                        },
                                                        Expr {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 2,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 25,
                                                                        end: 26,
                                                                        start_line: 1,
                                                                        start_col: 26,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 25,
                                                                end: 26,
                                                                start_line: 1,
                                                                start_col: 26,
                                                            },
                                                        },
                                                        Expr {
                                                            kind: Literal(
                                                                Literal {
                                                                    kind: Int {
                                                                        value: 3,
                                                                        suffix: None,
                                                                    },
                                                                    span: Span {
                                                                        start: 28,
                                                                        end: 29,
                                                                        start_line: 1,
                                                                        start_col: 29,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 28,
                                                                end: 29,
                                                                start_line: 1,
                                                                start_col: 29,
                                                            },
                                                        },
                                                    ],
                                                ),
                                            ),
                                        },
                                        span: Span {
                                            start: 15,
                                            end: 30,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 31,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 33,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 33,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 33,
        start_line: 1,
        start_col: 1,
    },
}
